--- a/HouseOfPrices/HouseOfPrices.csproj
+++ b/HouseOfPrices/HouseOfPrices.csproj
@@ -387,6 +387,7 @@
     </Compile>
     <Compile Include="House.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="MoneyTypeGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
